# server/alembic/versions/3bb5555fb8a7_add_price_per_day_to_items.py
@@ -1,0 +1,28 @@
+"""add price_per_day to items
+
+Revision ID: 3bb5555fb8a7
+Revises: d9a73830900c
+Create Date: 2026-07-04 18:57:16.815691
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+
+
+revision: str = '3bb5555fb8a7'
+down_revision: Union[str, None] = 'd9a73830900c'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('items', sa.Column('price_per_day', sa.Float(), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('items', 'price_per_day')
+    # ### end Alembic commands ###
