# server/src/models/openapi.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  shareloop.openapi.yaml
-#   timestamp: 2026-06-29T13:05:19+00:00
+#   timestamp: 2026-07-04T17:23:18+00:00
 
 from __future__ import annotations
 
@@ -77,9 +77,11 @@ class CreateItemRequest(ApiBaseModel):
     description: str
     city: str
     postal_code: str = Field(..., alias='postalCode')
+    address: str | None = None
     lat: float
     lng: float
     category: str
+    price_per_day: float | None = Field(None, alias='pricePerDay')
 
 
 class CreateItemResponse(ApiBaseModel):
@@ -94,8 +96,10 @@ class ItemEditDetail(ApiBaseModel):
     score: float
     city: str | None = None
     postal_code: str | None = Field(None, alias='postalCode')
+    address: str | None = None
     image_uuids: list[UUID] = Field(..., alias='imageUuids')
     category: str
+    price_per_day: float | None = Field(None, alias='pricePerDay')
     lat: float
     lng: float
     created_at: datetime = Field(..., alias='createdAt')
@@ -120,9 +124,11 @@ class UpdateItemRequest(ApiBaseModel):
     description: str
     city: str
     postal_code: str = Field(..., alias='postalCode')
+    address: str | None = None
     lat: float
     lng: float
     category: str
+    price_per_day: float | None = Field(None, alias='pricePerDay')
 
 
 class SortBy(Enum):
@@ -245,9 +251,11 @@ class ItemOverview(ApiBaseModel):
     distance: Distance | None = None
     city: str | None = None
     postal_code: str | None = Field(None, alias='postalCode')
+    address: str | None = None
     score: float
     image_uuid: str | None = Field(None, alias='imageUuid')
     category: str
+    price_per_day: float | None = Field(None, alias='pricePerDay')
 
 
 class ItemDetail(ApiBaseModel):
@@ -258,8 +266,10 @@ class ItemDetail(ApiBaseModel):
     score: float
     city: str | None = None
     postal_code: str | None = Field(None, alias='postalCode')
+    address: str | None = None
     image_uuids: list[UUID] = Field(..., alias='imageUuids')
     category: str
+    price_per_day: float | None = Field(None, alias='pricePerDay')
     created_at: datetime = Field(..., alias='createdAt')
     item_rating_count: int = Field(..., alias='itemRatingCount', ge=0)
     item_ratings: list[ItemRating] = Field(..., alias='itemRatings')
